--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "emailjs": "^4.0.3",
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.3.4"
   },
